correccion pagina de inicio y login